# odd69

./: .gitignore  CLAUDE.md  README.md  WCO - Games List(Games List).csv  deploy.sh  deploy_db.sh  deploy_web.sh  diamond_integration.sh  dynamic_scraper.js  fantasyapi.postman_collection.json  legacy_bonus_migration.sql  migrate_bonus.sh  openapi.json  remove_api.sh  remove_api_pt2.sh  remove_api_pt3.sh  scrape_score.js  scrape_score.py  sports_proxy_endpoints.md  start server.txt  ultrapay.online.postman_collection.json  update_prisma.sh
fantasyapp/: .gitignore  App.tsx  app.json  babel.config.js  package-lock.json  package.json
getway demo/: India接口v1.0.2025 (英文版）.doc  php_zct_object.php
getway demo/JavaDebitExampleV3/: pom.xml
ipl-landing/: contact.html  index.html  privacy.html  responsible-gaming.html  terms.html
newadmin/: next.config.ts  package-lock.json  package.json  userCheck.js  userCheck.ts
newadmin/prisma/: schema.prisma
newadmin/src/: middleware.ts
newbackend/: clean-images.js  docker-compose.yml  generate-missing-images-csv.js  get_env.ts  nest-cli.json  package-lock.json  package.json  sportradar.json  tsconfig.build.json  tsconfig.json  tsconfig.tsbuildinfo
newbackend/dist_debug/: app.module.js  app.module.js.map  (+15 more)
newwebsite/: .browserslistrc  next.config.ts  package-lock.json  package.json
nexpay-webhook-proxy/: .htaccess  webhook.php
scripts/: backup.sh
sports-sync-rust/: Cargo.toml  README.md  ecosystem.config.js
sports-sync-rust/src/: config.rs  constants.rs  main.rs  mongo_writer.rs  redis_writer.rs  sportradar.rs  sync.rs
(+1084 files in other folders)
