[package]
name = "sports-sync-rust"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "sports-sync-rust"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
redis = { version = "0.25", features = ["tokio-comp", "aio", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
bson = { version = "2.10", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
parking_lot = "0.12"
governor = "0.6"
nonzero_ext = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
